2010-07-12  Alan McGovern  <amcgovern@novell.com>

	* pal/gtk/im-gtk.cpp: Nuke
	  Helper.ReportException/PluginInstance::ReportException.
	  They're only used in debug builds and they cause DRTs to
	  fail. As they don't really have much of a use anymore,
	  remove them. Fixes drt 357.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/windowless-gtk.cpp: MoonWindowlessGtk::HandleEvent: null out
	button.device. Fixes a crash with #282.

2010-07-10  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* textbox.cpp:
	* richtextbox.cpp: SetIsAttached: don't do anything if the attached value
	doesn't change. Fixes a crash where we attach to events on the surface more
	than once (SetIsAttached (true) called several times), but only remove them
	once (when SetIsAttached (false)) is called.

2010-07-10  David Reveman  <davidr@novell.com>

	* uielement.cpp: Use effect_padding.

	* frameworkelement.cpp:
	* uielement.cpp: No need to check UIElement::RENDER_PROJECTION
	flag when computing bounds.

	* frameworkelement.cpp:
	* uielement.cpp:
	* rect.cpp:
	* rect.h: Add Rect::Transform (double *projection).

	* frameworkelement.cpp (ComputeGlobalBounds):
	* uielement.cpp:
	* uielement.h: Add effect_padding to UIElement class.

	* frameworkelement.cpp:
	* uielement.cpp:
	* effect.cpp:
	* effect.h: Replace Effect::TransformBounds with Effect::Padding.

	* uielement.cpp (ComputeSurfaceBounds):
	* frameworkelement.cpp (ComputeSurfaceBounds): Ignore ancestor
	element effects when computing surface bounds.

	* uielement.cpp (TransformBounds): Update surface and global
	bounds after call to ShiftPosition.

	* textblock.cpp (ComputeBounds):
	* stylus.cpp (ComputeBounds):
	* shape.cpp (ComputeBounds, TransformBounds):
	* panel.cpp (ComputeBounds):
	* grid.cpp (ComputeBounds):
	* glyphs.cpp (ComputeBounds):
	* frameworkelement.cpp (ComputeBounds):
	* canvas.cpp (ComputeBounds):
	* dirty.cpp (ProcessUpDirtyElements): Make it the responsibility of